// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package fleet;

enum State {
  STATE_INVALID = 0;
  STATE_ONBOARDING = 1;
  STATE_DEPLOYED = 2;
}

message AssetState {
  string id = 1;
  State state = 2;
}
